erDiagram
    ENERGY_OBJECTS ||--o{ METERS : has
    ENERGY_OBJECTS ||--o{ WEATHER_DATA : has
    ENERGY_OBJECTS ||--o{ BASELINES : has
    ENERGY_OBJECTS ||--o{ ENERGY_EFFICIENCY_KPIS : has
    METERS ||--o{ MEASUREMENTS : records
    TARIFF_SCHEDULE ||--o{ MEASUREMENTS : applies_by_hour

    ENERGY_OBJECTS {
        int object_id PK
        text name
        text object_type
        real area_m2
        real installed_power_kw
    }
    METERS {
        int meter_id PK
        int object_id FK
        text code
        int accounting_level
        real share_of_main_load
    }
    MEASUREMENTS {
        int measurement_id PK
        int meter_id FK
        text timestamp
        real consumption_kwh
        text quality_flag
    }
    WEATHER_DATA {
        int weather_id PK
        text timestamp
        real temperature_c
        real insolation_kw_m2
        real hdd_18
        real cdd_22
    }
    TARIFF_SCHEDULE {
        int tariff_id PK
        int hour
        text zone_name
        real import_price_uah_kwh
    }
    BASELINES {
        int baseline_id PK
        text timestamp
        real baseline_kwh
    }
